internal/gatewayapi/testdata/httproute-one-rule-without-match.out.json
[{
    "name": "example-route",
    "uris": ["/*"],
    "hosts": ["example.com"],
    "upstream": {
      "nodes": {
        "example-svc:80": 1
      }
    }
}]
